# navier-stokes-rs

./: .gitignore  Cargo.toml  README.md
scripts/: benchmark.sh  plot_benchmark_stats.py  summarize_benchmark.py  validate.sh  validate_ghia_centerlines.py
src/: io.rs  kernels.rs  main.rs  metrics.rs  multigrid.rs  poisson.rs  solver.rs
