[package]
name = "navier-stokes-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
